<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tournaments"
            android:icon="@drawable/ic_black_trophy"
            android:title="@string/nav_my_tournaments" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_36dp"
            android:title="@string/nav_my_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/drawer_settings" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_cancel_black_36dp"
            android:title="Log out" />
    </group>

</menu>
